Remove ClusterMemberInfo
This concept is only used by openflowplugin and it is a thinly wrapper
around Akka's JMX. As such it has no place in infrautils, as it violates
stated dependency requirements.

OFP should muck with cluster directly, so that the contract can be
properly hashed out.

JIRA: INFRAUTILS-77
Change-Id: Ic10af44302a3c03cd93ec224c3fd6d8a2ad597cd
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>